[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-fuzz-coverage-analysis"
version = "0.1.0"
description = "Analysis tool for OSS-Fuzz project coverage and crashes"
authors = [
    {name = "Karanjot Singh"}
]
readme = "README.md"
requires-python = "3.11"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
